fix font-size-medium on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -1887,7 +1887,7 @@ html,
   font-size: 28px;
 }
 .font-size-medium {
-  font-size: 16px;
+  font-size: 18px;
 }
 .font-size-small {
   font-size: 10px;
